--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,42 @@
-*.db
-/nbproject/
+﻿## Node.js
+lib-cov
+*.seed
+*.log
+*.csv
+*.dat
+*.out
+*.pid
+*.gz
+pids
+logs
+results
+npm-debug.log
+node_modules
+
+## Bower
+src/js/libs
+
+## Sass
+.sass-cache
+
+## OS X
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon
+._*
+.Spotlight-V100
+.Trashes
+
+## Windows
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+$RECYCLE.BIN/
+
+## Project
+build
+
+nbproject/
 nbproject/private/private.xml
-*.svn
+.svn
